internal class AnimationString
{
    internal static string isMoving = "isMoving";
    internal static string isGrounded = "isGrounded";
    internal static string isRunning = "isRunning";
    internal static string yVelocity = "yVelocity";
    internal static string jumpTricgger = "jump";
    internal static string isOnWall = "isOnWall";
    internal static string isOnCeiling = "isOnCeiling";
    internal static string attackTrigger = "isAttack01";
    internal static string canMove = "canMove";
    internal static string hasPlayer = "hasPlayer";
    internal static string attack1Trigger = "Attack1";
    internal static string attack2Trigger = "Attack2";
    internal static string canAttack = "canAttack";
    internal static string isChasing = "isChasing";
    internal static string isRageMode = "isRageMode";
}